src/style.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&family=Ubuntu:wght@400;700&display=swap');
/*
  1. Use a more-intuitive box-sizing model.
*/
*, *::before, *::after {
  margin:0;
  padding:0;
  box-sizing: border-box;
}
/*
  Typographic tweaks!
  3. Add accessible line-height
  4. Improve text rendering
*/
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  height: 110vh;
  color: var(--clr-black);
  font-family: var(--ff);
}
/*
  5. Improve media defaults
*/
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}
/*
  6. Remove built-in form typography styles
*/
input, button, textarea, select {
  font: inherit;
}
/*
  7. Avoid text overflows
*/
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}
/* Custom Classes */
.form input {
  border-top:none;
  border-left:none;
  border-right:none;
  border-bottom: 1px solid black;
  padding: 0.2rem;
  width: max(50%,10rem);
  color: var(--clr-black);
  background-image: linear-gradient(180deg,var(--clr-columbia-blue),var(--clr-light-blue));
}
a {
  text-decoration: none;
  color: black;
}
a:hover {
  color: var(--clr-white);
  transition: all 500ms;
}
header {
  padding: 0.5rem 0.7rem;
  display:flex;
  width:100%;
  justify-content: space-between;
  align-items: center;
  height:4rem;
  background-image: linear-gradient(to right,var(--clr-columbia-blue),var(--clr-light-blue));
  box-shadow: 0px 2px 3px var(--clr-light-blue);
}
.btn-container {
  width:min(30%,15rem);
  display:flex;
  gap:1rem;
  justify-content: center;
}
.btn-container button {
  border: none;
  padding: 0.2rem 0.4rem;
  border-radius:1rem;
  background: white;
}
button:hover {
  cursor: pointer;
}
/*Side menu Styles*/
.leftSideMenu { 
  padding: 0 0.4rem;
  margin:0;
  width: 30%;
  position: fixed;
  display:grid;
  place-content: center;
  height: 100vh;
  box-shadow:2px 0px 3px;
  transform:translateX(-100%);
  transition: all 500ms;
  background-image:linear-gradient(to left,var(--clr-columbia-blue),var(--clr-light-blue));
}
.leftSideMenuSlideIn {
  transform: translateX(0);
}
.rightSideMenu {
  padding: 0 0.4rem;
  margin:0;
  width: 30%;
  position: fixed;
  display:grid;
  place-content: center;
  height: 100vh;
  box-shadow:2px 0px 3px;
  transform:translateX(335%);
  transition: all 500ms;
  background-image:linear-gradient(to right,var(--clr-columbia-blue),var(--clr-light-blue));
}
.rightSideMenuSlideIn {
  transform: translateX(240%);
}
.close-btn-container {
  display:grid;
}
.close-btn-container > button {
  background: none;
  background-color: none;
  border:none;
}
.close-btn-container > button > img {
  margin-inline:auto;
} 
.nav-container li {
  display:flex;
  gap: 0.4rem;
  align-items: center;
  justify-content: center;
  text-align: center;
  margin-top: 1rem;
  margin-bottom:0.5rem;
  border-radius: 0.4rem;
}
.profile-container {
  padding: 1rem 1.5rem;
  display: flex;
  justify-content: center;
  margin-inline:auto;
  align-items: center;
}
.icon-container {
  margin: 1rem 1.2rem;
  display:grid;
  justify-content: center;
}
.icon-container p {
  text-align: center;
}
.nav-container {
  height: 100%;
  border-radius: 1rem;
  padding: 1rem 0.5rem;
}
.nav-container img {
  display:inline-block;
}
.title-container {
  margin: 1rem 0;
}
.title-container h4 {
  text-align: center;
}
#button-icon {
  background:none;
  border:none;
}

/*general styles*/
.notices-container {
  display: flex;
  flex-wrap: wrap;
  width: min(99%,60rem);
  justify-content: center;
  align-items: center;
  gap: 1rem;
}
.notices-container .card {
  background-color: var(--clr-columbia-blue);
  display: flex;
  justify-content: space-between;
  width: min(90%,16rem);
  height: 30%;
  align-items: center;
}
.notices {
  width: 50%;
  display: grid;
  align-items: center;
}
.notices h1 {
  text-wrap: nowrap;
  margin:0;
  padding:0;
  text-align: center;
}
.notices-number { 
  text-align: center;
  font-weight: 700;
  padding:0;
  margin:0;
}
.notices-image-container {
  height:100%;
  display:grid;
  place-content: center;
}
.notices-image-container img {
  height:100%;
}
.container {
  padding: 0.5rem;
  width:min(90%,60rem);
  margin-inline:auto;
}
.container-title {
  font-size: 1.3rem;
  margin-inline:auto;
}
/*Table Styles*/
.table-container {
  margin-inline:auto;
  background-color: var(--clr-white);
  padding: 1rem;
  border-radius: 1rem;
}
table{
  width: 100%;
  margin-inline:auto;
  border-collapse: collapse;
}
thead tr {
  color: black;
}
th, td {
  background-color: white;
  width: 12rem;
  border-bottom: 1px solid var(--clr-black);
  border-top: 1px solid var(--clr-columbia-blue);
  border-right: 1px solid var(--clr-columbia-blue);
  border-left: 1px solid var(--clr-columbia-blue);
  padding: 0.2rem;
  text-wrap: wrap;
}
td {
  text-align: center;
}
.payments-container {
  width: 100%;
  border-radius:0.8rem;
  background-color: var(--clr-white);
  padding: 1rem;
}
.payments-container .colorbox {
  font-family: var(--ff);
  text-align: center;
}
/* colorbox */
.colorbox {
  background-color: var(--clr-columbia-blue);
  padding: 0.2rem 0.3rem;
  border-radius: 0.4rem;
  width:30%;
  text-align: center;
}
/*card styles*/
.cards-container {
  display:flex;
  flex-direction: row;
  align-items: center;
  gap: 1rem;
  gap: 1rem;
}
.card-container {
  width: min(50%,30rem);
  height: 15rem;
  border-radius:0.8rem;
}
.card {
  width: 100%;
  height:100%;
  padding: 1rem 0.5rem;
  background-color: var(--clr-white);
  border-radius: 0.8rem;
}
.card h1 {
  text-align: left;
  font-size: 1rem;
}
.progress-container {
  width:min(90%,60rem);
  margin-inline:auto;
  margin-top:0.5rem;
  margin-bottom:1rem;
  padding: 0.5rem;
  display:flex;
  flex-wrap: wrap;
  background-color: var(--clr-white);
  border-radius: 1rem;
}
.progress-list {
  display: grid;
}
.progress-list li {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  border-top: 1px solid var(--clr-columbia-blue);
  margin-top:0.5rem;
  padding: 0.5rem;
}
.icon {
  display:inline-block;
}
/* Media Screens */
@media (max-width:360px){
  .leftSideMenu {
    width:100vw;
    height:100vh;
    .icon-container img {
      width:80%;
      height:80%;
      margin-inline:auto;
    }
  }
  .rightSideMenu {
    transform:translateX(-100%);
    width:100vw;
    transition: all 500ms;
  }
  .rightSideMenuSlideIn{
    transform:translateX(0);
  }
  .notices-container {
    display: grid;
  }
  .container {
    display:grid;
    height:90vh;
    gap: 1rem;
    margin-inline:auto;
  }
  .cards-container {
    display: grid;
    grid-auto-flow: column;
    place-content: center;
    width:100%;
  }
  .progress-container{
    margin-top:0;
    display:grid;
    gap:1rem;
    background-color: white;
  }
  .progress-list li {
    justify-content: space-between;
  }
  .cards-container {
    width:100%;
  }
  .card-container{
    margin-top:0.5rem;
    width:100%;
  }
  .card {
    width:100%;
    margin:0;
  }
}
@media (max-width:384px){
  .form input {
    width: 80%;
  }
  .leftSideMenu {
    width:100vw;
    height:100vh;
    .icon-container img {
      width:60%;
      height:60%;
      margin-inline:auto;
    }
  }
  .rightSideMenu {
    transform:translateX(-100%);
    width:100vw;
    transition: all 500ms;
  }
  .rightSideMenuSlideIn{
    transform:translateX(0);
  }
  .container {
    display:grid;
    gap: 1rem;
    margin-inline:auto;
  }
  .cards-container {
    place-content: center;
    width:100%;
  }
  .progress-container{
    margin-top:0;
    gap:1rem;
    background-color: white;
  }
  .progress-list li {
    justify-content: space-between;
  }
  .cards-container {
    width:100%;
  }
  .card-container{
    margin-top:0.5rem;
    width:100%;
  }
  .card {
    width:100%;
    margin:0;
  }
}

@media (max-width:414px){
  body{
    height:200vh;
  }
  .leftSideMenu {
    width:100vw;
    .icon-container img {
      width:90%;
      height:90%;
      margin-inline:auto;
    }
  }
  .rightSideMenu {
    transform:translateX(-100%);
    width:100vw;
    transition: all 500ms;
  }
  .rightSideMenuSlideIn{
    transform:translateX(0);
  }
  .notices-container {
    display: grid;
  }
  .container {
    display:grid;
    gap: 1rem;
    margin-inline:auto;
  }

  .progress-list li {
    justify-content: space-between;
  }
  .cards-container {
    display:block;
    width:100%;
  }
  .card-container{
    margin-top:0.5rem;
    width:100%;
  }
  .card {
    width:100%;
    margin:0;
  }
}

@media (max-width:430px){
  body{
    height:185vh;
  }
  .leftSideMenu {
    width:100vw;
    .icon-container img {
      width:90%;
      height:90%;
      margin-inline:auto;
    }
  }
  .rightSideMenu {
    transform:translateX(-100%);
    width:100vw;
    transition: all 500ms;
  }
  .rightSideMenuSlideIn{
    transform:translateX(0);
  }
  .notices-container {
    display: grid;
  }
  .container {
    display:grid;
    gap: 1rem;
    margin-inline:auto;
  }
  .cards-container {
    display: grid;
    place-content: center;
    width:100%;
  }
  .progress-container{
    display:grid;
    gap:1rem;
    background-color: white;
  }
  .progress-list li {
    justify-content: space-between;
  }
  .cards-container {
    display:block;
    width:100%;
  }
  .card-container{
    margin-top:0.5rem;
    width:100%;
  }
  .card {
    width:100%;
    margin:0;
  }
}

@media (max-width:768px){
  body {
    height:150vh;
  }
  .leftSideMenu {
    width:100vw;
    .icon-container img {
      width:90%;
      height:90%;
      margin-inline:auto;
    }
  }
  .rightSideMenu {
    transform:translateX(-100%);
    width:100vw;
    transition: all 500ms;
  }
  .rightSideMenuSlideIn{
    transform:translateX(0);
  }
  .notices-container {
    display: flex;
  }
  .container {
    gap: 1rem;
    margin-inline:auto;
  }
  .cards-container {
    display: grid;
    place-content: center;
  }
  .progress-container{
    display:grid;
    gap:1rem;
    background-color: white;
  }
  .progress-list li {
    justify-content: space-between;
  }
  .cards-container {
    display:flex;
  }
  .card-container{
    margin-top:0.5rem;
  }
  .card {
    margin:0;
  }
}
/*Variables used*/
:root {
  --clr-black: hsl(120, 100%, 0%);
  --clr-white: hsl(0, 0%, 95%);
  --clr-grey: hsl(224, 11%, 67%);
  --clr-light-blue: hsl(188, 35%, 69%);
  --clr-columbia-blue: hsl(205, 52%, 81%);
  
  --ff:'Ubuntu',sans-serif;
  --ff-condensed: 'Ubuntu Condensed',sans-serif;
}

